--- a/dollar-plugins/dollar-spark-plugin/pom.xml
+++ b/dollar-plugins/dollar-spark-plugin/pom.xml
@@ -19,40 +19,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dollar</artifactId>
+        <artifactId>dollar-plugins</artifactId>
         <groupId>me.neilellis</groupId>
         <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dollar-examples</artifactId>
-    <name>Dollar Examples</name>
-    <description>Examples of Dollar in Action</description>
+    <artifactId>dollar-spark-plugin</artifactId>
     <dependencies>
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-redis-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-metrics-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-spark-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
-            <version>1.7.7</version>
-        </dependency>
     </dependencies>
+
 </project>
