--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     <modules>
         <module>dollar-core</module>
         <module>dollar-examples</module>
+        <module>dollar-plugins</module>
     </modules>
 
     <dependencies>
@@ -138,7 +139,59 @@
     </reporting>
 
     <build>
-
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.3</version>
+                    <configuration>
+                        <shadedArtifactAttached>true</shadedArtifactAttached>
+                        <shadedClassifierName>fat</shadedClassifierName>
+                        <minimizeJar>true</minimizeJar>
+                        <filters>
+                            <filter>
+                                <!--
+                                    Exclude files that sign a jar
+                                    (one or multiple of the dependencies).
+                                    One may not repack a signed jar without
+                                    this, or you will get a
+                                    SecurityException at program start.
+                                -->
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                    <exclude>META-INF/*.INF</exclude>
+                                    <!-- This one may not be required -->
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.wvengen</groupId>
+                    <artifactId>proguard-maven-plugin</artifactId>
+                    <version>2.0.8</version>
+                    <!--<dependencies>-->
+                    <!--<dependency>-->
+                    <!--<groupId>net.sf.proguard</groupId>-->
+                    <!--<artifactId>proguard-base</artifactId>-->
+                    <!--<version>5.0</version>-->
+                    <!--<scope>runtime</scope>-->
+                    <!--</dependency>-->
+                    <!--</dependencies>-->
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <!-- The Compiler Plugin is used to compile the sources of your project.
                 The default compiler is javac and is used to compile Java sources. Also note
@@ -180,7 +233,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.8</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -315,41 +368,8 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <shadedArtifactAttached>true</shadedArtifactAttached>
-                    <shadedClassifierName>fat</shadedClassifierName>
-                    <filters>
-                        <filter>
-                            <!--
-                                Exclude files that sign a jar
-                                (one or multiple of the dependencies).
-                                One may not repack a signed jar without
-                                this, or you will get a
-                                SecurityException at program start.
-                            -->
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*.SF</exclude>
-                                <exclude>META-INF/*.RSA</exclude>
-                                <exclude>META-INF/*.INF</exclude>
-                                <!-- This one may not be required -->
-                            </excludes>
-                        </filter>
-                    </filters>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+
+
             <!--<plugin>-->
             <!--<artifactId>kotlin-maven-plugin</artifactId>-->
             <!--<groupId>org.jetbrains.kotlin</groupId>-->
