--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,8 @@ dependencies:
   pre:
 #    - sudo apt-get install -y gpg
     - ./gen-key.sh ${GPG_PASSPHRASE}
+    - "mkdir -p ~/.codespotter/ || : "
+    - echo "${CODE_SPOTTER_KEY}" > ~/.codespotter/.code-spotter.key
     - envsubst < settings.xml > ~/.m2/settings.xml
 #    - "mvn -q -Dgpg.passphrase=${GPG_PASSPHRASE} clean install -Dmaven.test.skip=true":
 #        timeout: 600
