--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -101,6 +101,10 @@
             <artifactId>raven</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.mapdb</groupId>-->
         <!--<artifactId>mapdb</artifactId>-->
