--- a/circle.yml
+++ b/circle.yml
@@ -44,8 +44,8 @@ test:
         timeout: 600
 
   post:
-    - mvn org.pitest:pitest-maven:mutationCoverage -pl me.neilellis:dollar-core
-#     - mvn com.code-spotter:codespotter-maven-plugin::check  -Dmaven.test.skip=true
+#    - mvn org.pitest:pitest-maven:mutationCoverage -pl me.neilellis:dollar-core
+     - mvn com.code-spotter:codespotter-maven-plugin::check  -Dmaven.test.skip=true -pl me.neilellis:dollar-core
 
 deployment:
   staging:
