--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,29 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.complykit</groupId>
+                <artifactId>license-check-maven-plugin</artifactId>
+                <version>0.5.2</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>os-check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <blacklist>
+                        <param>agpl-3.0</param>
+                        <!--exclude affero-->
+                        <param>gpl-2.0</param>
+                        <!--exclude gpl 2-->
+                        <param>gpl-3.0</param>
+                        <!--exclude gpl 3-->
+                    </blacklist>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>1.3.1</version>
@@ -380,9 +403,9 @@
                         <configuration>
                             <rules>
                                 <DependencyConvergence/>
-                                <requireReleaseDeps>
-                                    <message>No Snapshots Allowed!</message>
-                                </requireReleaseDeps>
+                                <!--<requireReleaseDeps>-->
+                                <!--<message>No Snapshots Allowed!</message>-->
+                                <!--</requireReleaseDeps>-->
                                 <requireMavenVersion>
                                     <version>3.1</version>
                                 </requireMavenVersion>
