--- a/dollar-docs/pom.xml
+++ b/dollar-docs/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -29,7 +29,7 @@
     <dependencies>
         <dependency>
             <groupId>me.neilellis</groupId>
-            <artifactId>dollar-examples</artifactId>
+            <artifactId>dollar-runtime</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
