--- a/dollar-resolver/pom.xml
+++ b/dollar-resolver/pom.xml
@@ -27,52 +27,16 @@
 
     <artifactId>dollar-resolver</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.jcabi</groupId>
-            <artifactId>jcabi-aether</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.wagon</groupId>
-            <artifactId>wagon-provider-api</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>maven-core</artifactId>
-            <groupId>org.apache.maven</groupId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.codehaus.plexus</groupId>-->
-        <!--<artifactId>plexus-utils</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.sonatype.sisu</groupId>-->
-        <!--<artifactId>sisu-inject-plexus</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>com.jcabi</groupId>
-            <artifactId>jcabi-log</artifactId>
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.apache.maven.wagon</groupId>-->
-        <!--<artifactId>wagon-provider-api</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>commons-lang3</artifactId>
-            <groupId>org.apache.commons</groupId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-        </dependency>
 
-
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-core</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-util</artifactId>
+        </dependency>
     </dependencies>
 
 
