--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -33,6 +33,10 @@
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -55,6 +59,21 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-maven-resolver-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-socketio-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-mapdb-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-simple-learner-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
