--- a/circle.yml
+++ b/circle.yml
@@ -36,6 +36,7 @@ test:
         timeout: 600
 
   post:
+    - echo "No tests"
 #    - mvn org.pitest:pitest-maven:mutationCoverage -pl com.sillelien:dollar-core
 
 deployment:
