--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -45,6 +45,11 @@
         </dependency>
         <dependency>
             <groupId>com.sillelien</groupId>
+            <artifactId>java-as-script</artifactId>
+            <version>0.9.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sillelien</groupId>
             <artifactId>dollar-camel-plugin</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
