--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   environment:
-    RELEASE: 0.1.${CIRCLE_BUILD_NUM}
+    MAJOR_VERSION: 0.3
     MAVEN_OPTS: "-Xmx1g -DbuildNumber=${CIRCLE_BUILD_NUM} "
   java:
     version: oraclejdk8
