--- a/pom.xml
+++ b/pom.xml
@@ -951,8 +951,12 @@
 
     <repositories>
         <repository>
-            <id>s3-releases</id>
-            <url>http://dollar-repo.s3-website-eu-west-1.amazonaws.com/release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-sillelien-maven</id>
+            <name>bintray</name>
+            <url>http://dl.bintray.com/sillelien/maven</url>
         </repository>
     </repositories>
 
